# flowbite-mcp

./: .env.example  .gitignore  CLINE_SETUP.md  COMPLETE_SUMMARY.md  DEPLOYMENT.md  Dockerfile  ENHANCED_SUMMARY.md  PROGRESS.md  README.md  README_CHANGES.md  UBUNTU_TESTING.md  cline_config.json  demo.html  docker-compose.yml  mcp_server_simple.py  modal_demo.html  pyproject.toml  quickstart.sh  requirements.txt  setup.sh  test_cline_integration.py  test_functional.py  test_mock_prompts.py  test_modal_components.py  test_navbar_components.py  test_new_components.py  test_offline.py  test_real_prompts.py  test_simplified.py
.doc/: PROGRESS.md  flowbite_mcp_spec.md
data/components/: button.json  form.json
src/: __init__.py  config.py  server.py
src/models/: __init__.py  component.py  schema.py
src/resources/: __init__.py  component_db.py  documentation.py
src/templates/: __init__.py
src/tools/: __init__.py  generator.py  suggestions.py  validator.py
src/utils/: __init__.py
